resolve chinese input on iOS

--- a/demo/style.css
+++ b/demo/style.css
@@ -1,13 +1,16 @@
 body {
     font-family: "Source Code Pro for Powerline", helvetica, sans-serif, arial;
-    font-size: 1em;
-    color: #111;
 }
 
 #terminal-container {
-    background-color: black;
-    user-select: none;
+    position: absolute;
+    height: 100%;
+    width: 100%;
     margin: 0;
+    padding: 0;
+    font-size:15px;
+    font-variant-ligatures: none;
+    -webkit-font-smoothing: antialiased;
 }
 
 #terminal-container .terminal {
