--- a/src/xterm.css
+++ b/src/xterm.css
@@ -38,9 +38,10 @@
 .terminal {
     background-color: #000;
     color: #fff;
-    font-family: courier-new, courier, monospace;
+    font-family: "Source Code Pro for Powerline", courier-new, courier, monospace;
     font-feature-settings: "liga" 0;
     position: relative;
+    font-size: 15px;
 }
 
 .terminal.focus,
@@ -54,21 +55,23 @@
 }
 
 .terminal .xterm-helper-textarea {
-    /*
-     * HACK: to fix IE's blinking cursor
-     * Move textarea out of the screen to the far left, so that the cursor is not visible.
-     */
     position: absolute;
-    opacity: 0;
-    left: -9999em;
-    top: 0;
+    color: #fff;
+    left: 0;
+    top: -100px;
     width: 0;
-    height: 0;
-    z-index: -10;
+    opacity: 0;
     /** Prevent wrapping so the IME appears against the textarea at the correct position */
     white-space: nowrap;
     overflow: hidden;
     resize: none;
+    z-index: 1;
+
+    border: none;
+    background: transparent;
+    font-size: inherit;
+    font-family: inherit;
+    outline: none;
 }
 
 .terminal .terminal-cursor {
